--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="col-12">
 					<nav class="navbar navbar-expand-md navbar-light">
 					
-						<a class="navbar-brand" href="" target="_blank"><img src="img/logo/logo.png" alt=""></a>	
+						<a class="navbar-brand" href="" target="_blank"><img src="img/logo/logo.svg" alt=""></a>	
 						
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
